Fix: Wrapping of naming tokens with alternate seperators

--- a/frontend/src/Settings/MediaManagement/Naming/NamingOption.css
+++ b/frontend/src/Settings/MediaManagement/Naming/NamingOption.css
@@ -17,7 +17,7 @@
 }
 
 .small {
-  width: 480px;
+  width: 490px;
 }
 
 .large {
@@ -26,7 +26,7 @@
 
 .token {
   flex: 0 0 50%;
-  padding: 6px 16px;
+  padding: 6px 6px;
   background-color: var(--popoverTitleBackgroundColor);
   font-family: $monoSpaceFontFamily;
 }
@@ -36,7 +36,7 @@
   align-items: center;
   justify-content: space-between;
   flex: 0 0 50%;
-  padding: 6px 16px;
+  padding: 6px 6px;
   background-color: var(--popoverBodyBackgroundColor);
 
   .footNote {
